Fix FireFox scrolltable layout bug

--- a/root/common/styles/jquery.scrolltable.css
+++ b/root/common/styles/jquery.scrolltable.css
@@ -11,9 +11,8 @@
 }
 
 @-moz-document url-prefix() {
-    .st-body-scroll {
-        position: absolute;
-        top: 22px;
+    .st-head {
+        height: 0.1px;
     }
 }
 
